Geometry Nodes: Improve error messages for property mismatches

Related to T82438. This adds some basic checks for common errors and
currently unsupported socket types in the modifier.